# YIPL

./: .gitignore  LICENSE  Main.py  README.md  functions.py  index.py  instructions.yaml  planning.md  pyproject.toml
src/yipl/: __init__.py  __main__.py  functions.py  index.py
